<resources>
    <string name="app_name">悦跑</string>
    <string name="action_settings">设置</string>
    <string name="action_search">查找</string>
    <string name="action_add">添加</string>
    <string name="menu_group_chat">发起群聊</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_scan">扫一扫</string>


    <string name="tab_contact">记录</string>
    <string name="tab_found">发现</string>
    <string name="tab_me">我</string>

    <string name="editPic">编辑头像</string>
    <string name="action_self">个人信息</string>
    <string name="wheelView">年龄</string>
    <string name="action_update">更新</string>
    <string name="action_about">关于</string>

    <string name="lorem_ipsum">哈发发</string>

    <!--        shenxm      -->
    <string name="default_city">北京</string>
    <string name="weather_detail"><![CDATA[天气详情>]]></string>
    <string name="aqi_cond">空气质量：</string>
    <string name="dafault_color">良好</string>
    <string name="today_sun">日出日落</string>
    <string name="weather_api">以上数据来源于和风天气</string>
    <string name="week_weather">未来一周天气</string>
    <string name="today_weather">今日详情</string>
    <string name="life_weather">生活指数</string>
    <string name="life_cmf">舒适度</string>
    <string name="life_drsg">穿衣指数</string>
    <string name="life_flu">感冒指数</string>
    <string name="life_sport">运动指数</string>
    <string name="life_trav">旅游指数</string>
    <string name="life_uv">紫外线</string>
    <string name="life_cw">洗车指数</string>

</resources>
