<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:hyman="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#27A5F9">
        <Button
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"

            android:background="@drawable/actionbar_search_icon"/>
        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="20sp"/>


        <Button
            android:id="@+id/share_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_menu_share"/>
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal">
        <com.tsunami.run.happyrun.utils.ChangeColorWithTest
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="5dp"
            hyman:color1="#27A5F9"
            hyman:text="@string/app_name"
            hyman:text_size="12sp"
            hyman:icon1="@drawable/ic_menu_start_conversation"/>
        <com.tsunami.run.happyrun.utils.ChangeColorWithTest
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="5dp"
            hyman:color1="#27A5F9"
            hyman:text="@string/tab_contact"
            hyman:text_size="12sp"
            hyman:icon1="@drawable/ic_menu_friendslist"/>
        <com.tsunami.run.happyrun.utils.ChangeColorWithTest
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="5dp"
            hyman:color1="#27A5F9"
            hyman:text="@string/tab_found"
            hyman:text_size="12sp"
            hyman:icon1="@drawable/ic_menu_emoticons"/>
        <com.tsunami.run.happyrun.utils.ChangeColorWithTest
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="5dp"
            hyman:color1="#27A5F9"
            hyman:text="@string/tab_me"
            hyman:text_size="12sp"
            hyman:icon1="@drawable/ic_menu_allfriends"/>

    </LinearLayout>

</LinearLayout>
